src/scss/_common.scss
@use "bulma/sass/utilities/mixins" as mixins;
@use "variables" as hvars;
@use "mixins" as hmixins;

body {
  overflow-x: hidden;
  font-family: -apple-system, BlinkMacSystemFont, "Fira Sans", "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 400;
  font-size: hvars.$h-body-font-size;
  line-height: 1.6;
}

// Heading weight 400 (replaces Bulma $content-heading-weight when variables are not passed)
.title,
.subtitle {
  font-weight: 400;
}

.subtitle {
  font-size: inherit;
  line-height: 1.5;
}

// Link colors (replaces Bulma $link, $link-hover when variables are not passed)
a {
  color: hvars.$h-primary;
}
a:hover {
  color: hvars.$h-link-hover;
}

// Primary buttons: boston blue (#2e86b7) with white text (as in old Bulma 0 version)
.button.is-primary {
  background-color: hvars.$h-primary;
  border-color: transparent;
  color: #fff;

  &:hover {
    background-color: hvars.$h-primary-hover;
    color: #fff;
  }
}

.h-sidebar {
  font-size: hvars.$h-navbar-font-size;
}

.h-columns-with-sidebar {
  align-items: flex-start;
}

// Shared backdrop animation for UI panels (sidebar/menu/toc/etc.)
.h-backdrop {
  @include hmixins.h-backdrop;
}

// Footer: less tall + spacing from content above
.footer {
  margin-top: 2rem;
  padding: 1.5rem 1.5rem;
}

